syntax = "proto3";

package payment;

option go_package = "./proto;payment";

service Payment {
	rpc AddPayment(PaymentInfo) returns (PaymentID) {}
	rpc UpdatePayment(PaymentInfo) returns (Response) {}
	rpc DeletePaymentByID(PaymentID) returns (Response) {}
	rpc FindPaymentByID(PaymentID) returns (PaymentInfo) {}
	rpc FindAllPayment(All) returns (AllPayment) {}
}

message PaymentInfo {
	int64 id = 1;
	string payment_name = 2;
	string payment_sid = 3;
	bool payment_status = 4;
	string PaymentImage = 5;
}

message PaymentID {
	int64 payment_id = 1;
}

message PaymentImage {
	int64 stroke = 1;
}

message Response {
	string msg = 1;
}

message All {
}

message AllPayment {
	repeated PaymentInfo payment_infos = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}
